beta 7 & 8